# wasmtime

crates/wasi-nn/examples/classification-component-onnx/: Cargo.toml  README.md
crates/wasi-nn/examples/classification-component-onnx/src/: bindings.rs  main.rs
crates/wasi-nn/examples/classification-component-onnx/wit/: world.wit
crates/wasi-nn/src/: ctx.rs  lib.rs  wit.rs  witx.rs
crates/wasi-nn/src/backend/: mod.rs  onnxruntime.rs  openvino.rs
crates/wasi/src/: preview1.rs
src/commands/: run.rs  serve.rs
