[package]
name = "classification-component-onnx"
version = "0.1.0"
edition = "2021"
authors = ["The Wasmtime Project Developers"]
readme = "README.md"
publish = false

[package.metadata.component]
package = "component:classification-component-onnx"

[package.metadata.component.target.dependencies]
"wasi:nn" = { path = "../../spec/wit/wasi-nn.wit" }

[dependencies]
wit-bindgen-rt = "0.22.0"
image = { version = "0.25.0", default-features = false, features = ["jpeg"] }
ndarray = "0.15.3"



# This crate is built with the wasm32-wasi target, so it's separate
# from the main Wasmtime build, so use this directive to exclude it
# from the parent directory's workspace.
[workspace]
